--- a/Resturants/StroyBoard/Profile.storyboard
+++ b/Resturants/StroyBoard/Profile.storyboard
@@ -2828,7 +2828,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="DNr-lP-YGS">
-                                                        <rect key="frame" x="0.0" y="55.666666666666629" width="361" height="552.00000000000011"/>
+                                                        <rect key="frame" x="0.0" y="55.666666666666629" width="361" height="552"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="USF-0P-i7q">
                                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="38"/>
@@ -3151,18 +3151,13 @@
                                                                             </userDefinedRuntimeAttribute>
                                                                         </userDefinedRuntimeAttributes>
                                                                     </textField>
-                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="li1-E2-ns7">
-                                                                        <rect key="frame" x="299" y="12.666666666666671" width="30" height="30"/>
+                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="li1-E2-ns7">
+                                                                        <rect key="frame" x="16" y="12.666666666666671" width="313" height="30"/>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="width" constant="30" id="hHy-bw-DbU"/>
                                                                             <constraint firstAttribute="height" constant="30" id="t2l-fE-eRb"/>
                                                                         </constraints>
                                                                         <color key="tintColor" name="ColorWhite"/>
                                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                                        <state key="normal">
-                                                                            <imageReference key="image" image="chevron.down" catalog="system" symbolScale="medium"/>
-                                                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="semibold"/>
-                                                                        </state>
                                                                         <connections>
                                                                             <action selector="ontapCrntAccntType:" destination="2FE-yP-CBU" eventType="touchUpInside" id="99u-9O-GIA"/>
                                                                         </connections>
@@ -3171,6 +3166,7 @@
                                                                 <color key="backgroundColor" name="ColorBlack"/>
                                                                 <constraints>
                                                                     <constraint firstItem="FC2-NX-Ll5" firstAttribute="top" secondItem="RcZ-ks-7aL" secondAttribute="top" id="8kE-Hq-UVk"/>
+                                                                    <constraint firstItem="li1-E2-ns7" firstAttribute="leading" secondItem="RcZ-ks-7aL" secondAttribute="leading" constant="16" id="CuX-zR-WSQ"/>
                                                                     <constraint firstAttribute="trailing" secondItem="FC2-NX-Ll5" secondAttribute="trailing" constant="16" id="I6c-FC-XmY"/>
                                                                     <constraint firstAttribute="trailing" secondItem="li1-E2-ns7" secondAttribute="trailing" constant="16" id="PY9-cL-Y5K"/>
                                                                     <constraint firstItem="li1-E2-ns7" firstAttribute="centerY" secondItem="RcZ-ks-7aL" secondAttribute="centerY" id="jHR-Jc-m2f"/>
@@ -3228,7 +3224,7 @@
                                                                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="26" scale="large"/>
                                                                                 </state>
                                                                                 <connections>
-                                                                                    <action selector="ontapTypeofCuzn:" destination="2FE-yP-CBU" eventType="touchUpInside" id="fNj-F2-6Qg"/>
+                                                                                    <action selector="ontapAddCuision:" destination="2FE-yP-CBU" eventType="touchUpInside" id="CFu-yx-ytN"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
@@ -3257,7 +3253,7 @@
                                                                                     <fontDescription key="titleFontDescription" name="AlNile-Bold" family="Al Nile" pointSize="16"/>
                                                                                 </buttonConfiguration>
                                                                                 <connections>
-                                                                                    <action selector="ontapTypeofCuzn:" destination="2FE-yP-CBU" eventType="touchUpInside" id="Aoo-Au-Xjh"/>
+                                                                                    <action selector="ontapAddCuision:" destination="2FE-yP-CBU" eventType="touchUpInside" id="C1n-PJ-mME"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
@@ -3388,7 +3384,7 @@
                                                                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="26" scale="large"/>
                                                                                 </state>
                                                                                 <connections>
-                                                                                    <action selector="ontapMeal:" destination="2FE-yP-CBU" eventType="touchUpInside" id="3uf-mA-T8w"/>
+                                                                                    <action selector="onTapMeals:" destination="2FE-yP-CBU" eventType="touchUpInside" id="k2b-rV-Ffm"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
@@ -3417,7 +3413,7 @@
                                                                                     <fontDescription key="titleFontDescription" name="AlNile-Bold" family="Al Nile" pointSize="16"/>
                                                                                 </buttonConfiguration>
                                                                                 <connections>
-                                                                                    <action selector="ontapMeal:" destination="2FE-yP-CBU" eventType="touchUpInside" id="Rms-d8-hgB"/>
+                                                                                    <action selector="onTapMeals:" destination="2FE-yP-CBU" eventType="touchUpInside" id="vNG-3H-weJ"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
@@ -3548,7 +3544,7 @@
                                                                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="26" scale="large"/>
                                                                                 </state>
                                                                                 <connections>
-                                                                                    <action selector="ontapSpecialize:" destination="2FE-yP-CBU" eventType="touchUpInside" id="uBi-eK-alE"/>
+                                                                                    <action selector="onTapSpecail:" destination="2FE-yP-CBU" eventType="touchUpInside" id="SXY-p8-fga"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
@@ -3577,7 +3573,7 @@
                                                                                     <fontDescription key="titleFontDescription" name="AlNile-Bold" family="Al Nile" pointSize="16"/>
                                                                                 </buttonConfiguration>
                                                                                 <connections>
-                                                                                    <action selector="ontapSpecialize:" destination="2FE-yP-CBU" eventType="touchUpInside" id="qd4-30-Uwz"/>
+                                                                                    <action selector="onTapSpecail:" destination="2FE-yP-CBU" eventType="touchUpInside" id="eUh-GA-B9n"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
@@ -3621,6 +3617,9 @@
                                                                         <real key="value" value="8"/>
                                                                     </userDefinedRuntimeAttribute>
                                                                 </userDefinedRuntimeAttributes>
+                                                                <connections>
+                                                                    <action selector="ontapSave:" destination="2FE-yP-CBU" eventType="touchUpInside" id="uHi-EB-LRg"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                     </stackView>
@@ -4565,6 +4564,9 @@
                                                         <real key="value" value="8"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="ontapNextStep:" destination="o7f-aE-ggc" eventType="touchUpInside" id="AE7-Rj-YQs"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -4615,7 +4617,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H58-jZ-0cZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2081.679389312977" y="663.38028169014092"/>
+            <point key="canvasLocation" x="2082" y="676"/>
         </scene>
         <!--Delete AccntVC-->
         <scene sceneID="MsX-qU-yqF">
@@ -5405,7 +5407,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="d5J-98-0py">
-                                                        <rect key="frame" x="0.0" y="58" width="371" height="16"/>
+                                                        <rect key="frame" x="0.0" y="58" width="371" height="128"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address : Street 101, Swedan Market" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Cu-qh-7Jd">
                                                                 <rect key="frame" x="0.0" y="0.0" width="371" height="0.0"/>
@@ -5419,8 +5421,8 @@
                                                                 <color key="textColor" name="ColorWhite"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="2bF-Ae-Gu1">
-                                                                <rect key="frame" x="0.0" y="16" width="371" height="96"/>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="2bF-Ae-Gu1">
+                                                                <rect key="frame" x="0.0" y="32" width="371" height="96"/>
                                                                 <subviews>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="IJ4-rE-fkf">
                                                                         <rect key="frame" x="0.0" y="0.0" width="371" height="0.0"/>
@@ -9174,7 +9176,7 @@ platform be detailed.</string>
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="NoZ-Pa-cHR">
-                                                        <rect key="frame" x="0.0" y="257.00000000000006" width="361" height="84"/>
+                                                        <rect key="frame" x="0.0" y="257" width="361" height="84"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJ2-zv-Gi8">
                                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="17"/>
